# translator

./: CMakeLists.txt  Config.h.in
generator/: CMakeLists.txt  CSGenerator.cpp  Context.h  CppGenerator.cpp  Definition.h  LUAGenerator.cpp  Options.cpp  translator.cpp  translator.l  translator.y
runtime/: CMakeLists.txt
runtime/cpp/translator/: BinaryReader.h  BinaryWriter.h  Common.h  FileReader.cpp  FileReader.h  FileWriter.cpp  FileWriter.h  MemoryReader.cpp  MemoryReader.h  MemoryWriter.cpp  MemoryWriter.h  ProtocolReader.cpp  ProtocolReader.h  ProtocolWriter.cpp  ProtocolWriter.h
runtime/lua/translator/: reader.lua  types.lua  writer.lua
